<resources>
    <string name="app_name">Clubspire</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logo">logo</string>
    <string name="text_reservation">Rezervace</string>
    <string name="text_userName">Uživatelské jméno</string>
    <string name="text_reservationList">Seznam rezervací</string>
    <string name="text_hint">Nápověda</string>

    <string name="name">Jméno</string>
    <string name="surname">Příjmení</string>
    <string name="password">Heslo</string>
    <string name="email">Email</string>
    <string name="register">Registrovat</string>
    <string name="default_attendants">1</string>
    <string name="text_logout">Odhlásit</string>

    <string name="text_tyden">Týden</string>

    <string name="text_cancel_reservation">Zrušit rezervaci</string>
    <string name="text_cancel_reservation_question">Opravdu chcete rezervaci zrušit?</string>
    <string name="text_reservation_canceled">Rezervace zrušena</string>
    <string name="text_yes">Ano</string>
    <string name="text_no">Ne</string>
    <string name="string_back">Zpět</string>
    <string name="string_cancel">Zrušit</string>
    <string name="text_reservation_complete">Rezervace vytvořena</string>
    <string name="text_available">volno</string>
    <string name="text_unavailable">obsazeno</string>
    <string name="string_login">Přihlášení</string>
    <string name="weekString">Týden</string>

    <string name="hint00">Nová rezervace</string>
    <string name="hint01">vyberte aktivitu</string>
    <string name="hint02">zvolte týden</string>
    <string name="hint03">...</string>
    <string name="hint04">zvolte termín</string>
    <string name="hint05">upravte údaje a potvrďte</string>
    <string name="hint06">Zrušení rezervace</string>
    <string name="hint07">vyberte rezervaci</string>
    <string name="hint08">zrušte rezervaci</string>

    <string name="wrongConnection">Aplikace potřebuje funkční pŕipojení k internetu</string>


</resources>
