<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    //toolbar
    <include layout="@layout/toolbar"/>


    <RelativeLayout
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/registrationItemsLayout"
        >
        //jmeno

        <EditText
            android:textColor="@color/secondary_color"
            android:id="@+id/textfield_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/item_marginTop"

            android:background="@drawable/edit_text"
            android:padding="@dimen/edit_text_padding"
            android:paddingTop="@dimen/edit_text_padding"
            android:paddingBottom="@dimen/edit_text_padding"
            />

        //prijmeni

        <EditText
            android:id="@+id/textfield_surname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/surname"
            android:textAlignment="center"
            android:layout_below="@+id/textfield_name"
            android:layout_marginTop="@dimen/item_marginTop"

            android:background="@drawable/edit_text"
            android:padding="@dimen/edit_text_padding"
            android:paddingTop="@dimen/edit_text_padding"
            android:paddingBottom="@dimen/edit_text_padding"
            />

        //login

        <EditText
            android:id="@+id/textfield_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/text_userName"
            android:textAlignment="center"
            android:layout_below="@+id/textfield_surname"
            android:layout_marginTop="@dimen/item_marginTop"

            android:background="@drawable/edit_text"
            android:padding="@dimen/edit_text_padding"
            android:paddingTop="@dimen/edit_text_padding"
            android:paddingBottom="@dimen/edit_text_padding"
            />

        //password

        <EditText
            android:id="@+id/textfield_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text="@string/password"
            android:textAlignment="center"
            android:layout_below="@+id/textfield_login"
            android:layout_marginTop="@dimen/item_marginTop"

            android:background="@drawable/edit_text"
            android:padding="@dimen/edit_text_padding"
            android:paddingTop="@dimen/edit_text_padding"
            android:paddingBottom="@dimen/edit_text_padding"
            />

        //email

        <EditText
            android:id="@+id/textfield_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:text="@string/email"
            android:textAlignment="center"
            android:layout_below="@+id/textfield_password"
            android:layout_marginTop="@dimen/item_marginTop"

            android:background="@drawable/edit_text"
            android:padding="@dimen/edit_text_padding"
            android:paddingTop="@dimen/edit_text_padding"
            android:paddingBottom="@dimen/edit_text_padding"

            />

        <Button
            android:id="@+id/btn_confirm_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:height="@dimen/button_height"
            android:background="@color/secondary_item_color"
            android:clickable="true"
            android:text="@string/register"
            android:layout_alignEnd="@+id/textfield_email"
            android:layout_below="@+id/textfield_email"
            android:layout_marginTop="@dimen/item_marginTop"
            android:textColor="@color/primary_color" />


    </RelativeLayout>
</LinearLayout>
