<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="true"
    android:background="@color/background_color">

    //toolbar
    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp">

        //LOGO
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/imageView"
            android:src="@drawable/logo2"
            android:contentDescription="@string/logo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp">

        //rezervace button
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_reservation"
            android:id="@+id/btn_reservation"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:background="@color/secondary_item_color"
            android:width="200dp"
            android:height="@dimen/button_height"
            android:layout_alignParentTop="false"
            android:layout_marginTop="@dimen/item_marginTop" />

        //seznam rezervací button
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_reservationList"
            android:id="@+id/btn_reservation_list"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:background="@color/secondary_item_color"
            android:width="200dp"
            android:height="@dimen/button_height"
            android:layout_alignParentTop="false"
            android:layout_marginTop="@dimen/item_marginTop"
            android:layout_below="@+id/btn_reservation" />

        //hint
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_hint"
            android:id="@+id/btn_hint"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:background="@color/secondary_item_color"
            android:width="200dp"
            android:height="@dimen/button_height"
            android:layout_alignParentTop="false"
            android:layout_marginTop="@dimen/item_marginTop"
            android:layout_below="@+id/btn_reservation_list" />



    </RelativeLayout>

</LinearLayout>
