<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:baselineAligned="false"
    android:orientation="vertical">

    //toolbar

    <include layout="@layout/toolbar" />


    //aktivita layout

    <RelativeLayout
        android:id="@+id/activityViewReservationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/primary_item_color"
        android:paddingLeft="5dp"
        android:paddingRight="20dp">

        //aktivita

        <TextView
            android:id="@+id/textViewReservationActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="Aktivita"
            android:textColor="@color/secondary_color" />

        //aktivita content

        <EditText
            android:id="@+id/txtViewReservationActivityContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="false"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:background="#00000000"
            android:clickable="false"
            android:editable="false"
            android:enabled="false"
            android:padding="5dp"
            android:text="aktivita XXX"
            android:textColor="@color/primary_color" />
    </RelativeLayout>

    //datum layout

    <RelativeLayout
        android:id="@+id/dateViewReservationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/primary_item_color"
        android:paddingLeft="5dp"
        android:paddingRight="20dp">

        //datum

        <TextView
            android:id="@+id/textViewReservationDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="Datum"
            android:textColor="@color/secondary_color" />

        //datum content

        <EditText
            android:id="@+id/txtViewReservationDateContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="false"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:background="#00000000"
            android:clickable="false"
            android:editable="false"
            android:enabled="false"
            android:padding="5dp"
            android:text="datum XXX"
            android:textColor="@color/primary_color" />
    </RelativeLayout>

    //čas layout

    <RelativeLayout
        android:id="@+id/timeViewReservationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/primary_item_color"
        android:paddingLeft="5dp"
        android:paddingRight="20dp">

        //čas

        <TextView
            android:id="@+id/textViewReservationTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="Čas"
            android:textColor="@color/secondary_color" />

        //čas content

        <EditText
            android:id="@+id/txtViewReservationTimeContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="false"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:background="#00000000"
            android:clickable="false"
            android:editable="false"
            android:enabled="false"
            android:padding="5dp"
            android:text="Time XXX"
            android:textColor="@color/primary_color" />
    </RelativeLayout>

    //uživatel layout

    <RelativeLayout
        android:id="@+id/userViewReservationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/primary_item_color"
        android:paddingLeft="5dp"
        android:paddingRight="20dp">

        //uživatel

        <TextView
            android:id="@+id/textViewReservationUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="Uživatel"
            android:textColor="@color/secondary_color" />

        //uživatel content

        <EditText
            android:id="@+id/txtViewReservationUserContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="false"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:background="#00000000"
            android:clickable="false"
            android:editable="false"
            android:enabled="false"
            android:padding="5dp"
            android:text="User XXX"
            android:textColor="@color/primary_color" />
    </RelativeLayout>


    //reservation item list

    //upozornění

    <RelativeLayout
        android:id="@+id/viewReservationNotificationLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="20dp">

        //upozornění text//

        <TextView
            android:id="@+id/textViewReservationNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="Upozornění"
            android:textColor="@color/secondary_color" />

        //mobile notification

        <CheckBox
            android:id="@+id/checkBoxViewReservation_notifyMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:checked="true"
            android:enabled="false"
            android:paddingEnd="25dp"
            android:text="mobil"
            android:textColor="@color/secondary_color" />

        //email notification

        <CheckBox
            android:id="@+id/checkBoxViewReservation_notifyEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="false"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@id/checkBox_notifyMobile"
            android:checked="true"
            android:enabled="false"
            android:paddingEnd="25dp"
            android:text="e-mail"
            android:textColor="@color/secondary_color" />

    </RelativeLayout>


    //účastník

    <RelativeLayout
        android:id="@+id/playerViewReservationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:weightSum="1">

        //players

        <TextView
            android:id="@+id/textViewReservationPlayers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="Počet účastníků"
            android:textColor="@color/secondary_color" />

        //players content

        <EditText
            android:id="@+id/editViewReservationPlayersContent"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="false"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:width="40dp"

            android:background="@color/color_reservation_item"

            android:clickable="false"
            android:editable="false"
            android:enabled="false"
            android:gravity="center"
            android:inputType="number"

            android:padding="5dp"
            android:text="@string/default_attendants"
            android:textColor="@color/secondary_color" />
    </RelativeLayout>

    //poznámka

    <RelativeLayout
        android:id="@+id/noteViewReservationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:weightSum="1">

        //note

        <TextView
            android:id="@+id/textViewReservationNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="Poznámka"
            android:textColor="@color/secondary_color" />

        //note content

        <EditText

            android:id="@+id/editTextViewReservationNoteContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="false"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@id/textNote"
            android:layout_toRightOf="@+id/textViewReservationNote"
            android:background="@color/color_reservation_item"

            android:clickable="false"
            android:editable="false"
            android:enabled="false"
            android:minHeight="@dimen/menu_item_height"
            android:textColor="@color/secondary_color"
            android:padding="3dp"
            android:gravity="top"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        //buttons

        <LinearLayout
            android:id="@+id/btnViewReservationConfirmLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:weightSum="10">

            //confirm

            <Button
                android:id="@+id/btnViewReservationConfirm"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginRight="5dp"
                android:layout_weight="5"
                android:background="@drawable/button_gray"
                android:text="@string/string_back"
                android:textColor="@color/primary_color" />

            //cancel

            <Button
                android:id="@+id/btnViewReservationCancel"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_marginLeft="5dp"
                android:layout_weight="5"
                android:background="@drawable/button_red"
                android:text="@string/string_cancel"
                android:textColor="@color/primary_color" />


        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBarViewReservation"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btnViewReservationConfirmLayout"
            android:layout_marginTop="@dimen/item_marginTop"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:indeterminateOnly="true"
            android:keepScreenOn="true"
            android:visibility="invisible"
            />
    </RelativeLayout>


</LinearLayout>
